@@ -1,3 +1,14 @@
+2002-10-26  Philippe Elie  <phil.el@wanadoo.fr>
+
+	* configure.in: minor cleanup. Use config.h rather than gcc -D option
+
+	* libutil/op_libiberty.h:
+	* libutil++/op_bfd.h:
+	* pp/opp_symbol.h: #include <config.h>
+
+	* libutil/Makefile.in:
+	* pp/Makefile.in: remove BFD_CXXFLAGS
+
 2002-10-24  Philippe Elie  <phil.el@wanadoo.fr>
 
 	* libutil++/op_bfd.cpp:
